--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.3
   rflutter_alert: ^2.0.4
   font_awesome_flutter: ^10.1.0
+  flash_card: ^0.0.7
+  tcard: ^1.3.5
 
 dev_dependencies:
   flutter_test:
