--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flash_card: ^0.0.7
   tcard: ^1.3.5
   shared_preferences: ^2.0.15
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - images/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
