--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   tcard: ^1.3.5
   shared_preferences: ^2.0.15
   animated_text_kit: ^4.2.2
+  bottom_nav_layout: ^3.0.9
+  fl_chart: ^0.55.0
 
 dev_dependencies:
   flutter_test:
